# scientific-team-project

./: .gitignore  CMakeLists.txt  README.md  gecko_pool_ Thread Pool in geckoDB_Bolster - Concept.md  notes.md
Presentations/.sync/: settings.dat.old  storage.db-wal
Presentations/Milestone1/: presentation.tex
Presentations/Milestone1/img/: bigpicture.xcf
Presentations/Milestone2/: presentation.tex
Presentations/Milestone3/: presentation.tex
Presentations/Milestone3/img/: pool_queue.xcf
Presentations/Milestone4/: presentation.tex
Presentations/Paper/: notes.txt  paper_thread_pool.bbl  paper_thread_pool.bib  paper_thread_pool.blg  paper_thread_pool.tex
Presentations/Paper/img/: Pool structure.xcf
Statistics/: Makefile  lock_free.csv  lock_free.gnu  pool_avg.csv  pool_avg.gnu  pool_avg_pres.gnu  pool_avg_wait.gnu  pool_baseline.csv  pool_baseline.gnu  pool_util.gnu  pool_util_wait.gnu  slot_dist.gnu  slot_distr.csv  thread.gnu
include/: benchmark_switches.h  priority_queue.h  status.h  thread_pool.h  thread_pool_monitoring.h  thread_pool_statistics.h  thread_status.h
literature/: literature.md
schedule/: schedule.html
src/: main.c  priority_queue.c  thread_pool.c  thread_pool_monitoring.c
testing/: test_runner.c  test_runner.cpp
testing/tests/priorityqueue/: test_queue.hpp
testing/tests/thread_pool/: test_thread_pool.c  test_thread_pool.h
testing/tests/threadpool/: test_pool.hpp
testing_c/: test_runner.c
testing_c/tests/thread_pool/: test_thread_pool.h
testing_cpp/thread_pool/: test_thread_pool.c
